--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "date-fns": "^2.28.0",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
